# goatclaw

./: .gitignore  ARCHITECTURE.md  EXAMPLES.md  GOATCODE_FLUTTER_COMPLETE.md  INSTALLATION_AND_TESTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  USP_SUMMARY.md  __init__.py  build_dash_out.txt  build_dashboard.py  build_log.txt  chaos_runner.py  check_imports.py  check_metrics_deps.py  check_metrics_deps_v2.py  check_metrics_only.py  check_reverse_imports.py  config.go  debug_orchestration.py  debug_output.txt  debug_validation.py  demo_out.txt  docker-compose.yml  executor.go  go.mod  goatcode-architecture.md  goatcode-dashboard.jsx  goatcode-preview.jsx  import_times.txt  index.html  install.ps1  install.sh  linux_adapter.py  llm_adapter.py  logger.go  mac_adapter.py  main.go  (+22 more)
.github/workflows/: pypi-publish.yml  test.yml
backend/: main.py  requirements.txt
goatclaw/: cli.py  database.py  init_db.py  message_broker.py  orchestrator.py  runner.py  specialists.py  task_queue.py  terminal.py  vector_store.py  worker.py
goatclaw/agents/: base_agent.py  memory_agent.py  planner_agent.py  security_agent.py  validation_agent.py
goatclaw/core/: billing.py  event_bus.py  logging_config.py  metrics.py  ollama_client.py  sandbox.py  structs.py  vault.py
src/: App.tsx  index.css  types.ts
src/components/: CategoriesView.tsx  CategoryFilter.tsx  Dashboard.tsx  Header.tsx  HistoryView.tsx  LeadCard.tsx  LeadModal.tsx  LeadsView.tsx  ScrapingView.tsx  Sidebar.tsx  StatsCards.tsx  Toast.tsx
tests/: conftest.py  test_event_bus.py  test_orchestration.py  test_security.py  test_validation.py
(+3 files in other folders)
