[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goatclaw"
version = "1.1.2"
description = "Advanced Multi-Agent Orchestration System with Local LLM Support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Shivay Singh", email = "shivaysinghrajputofficial@gmail.com"}
]
keywords = ["ai", "agents", "orchestration", "llm", "ollama", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]

[project.scripts]
goatclaw = "goatclaw.cli:main"

[project.urls]
Homepage = "https://github.com/Shivay00001/goatclaw"
Repository = "https://github.com/Shivay00001/goatclaw"
Issues = "https://github.com/Shivay00001/goatclaw/issues"

[tool.setuptools.packages.find]
include = ["goatclaw*"]
